--- a/30 Days of Code/.classpath
+++ b/30 Days of Code/.classpath
@@ -5,7 +5,14 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="Day 1"/>
 	<classpathentry kind="src" path="Day 0"/>
+	<classpathentry kind="src" path="Day 2"/>
+	<classpathentry kind="src" path="Day 3"/>
+	<classpathentry kind="src" path="Day 4"/>
+	<classpathentry kind="src" path="Day 5"/>
+	<classpathentry kind="src" path="Day 6"/>
+	<classpathentry kind="src" path="Day 7"/>
+	<classpathentry kind="src" path="Day 8"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
